fine struttura sezione superiore ( stile da migliorare)

--- a/index.html
+++ b/index.html
@@ -17,43 +17,58 @@
             <!-- sezione header con le 2 navbar -->
             <header>
                 <!-- navbar superiore -->
-                <nav id="header-top">
-                    <div id="top-left">
-                        <small class="text-capitalize">english</small>
-                    </div>
-                    <div id="top-right">
-                        <!-- sezione lista sezioni sito -->
-                        <ul>
-                            <li>course</li>
-                            <li>zom</li>
-                        </ul>
-                        <!-- icone dei vari social -->
-                        <ul id="social-icons">
-                            <li>
-                                <i class="fab fa-twitter"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-instagram"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-git"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-dribbble"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-linkedin"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-pinterest"></i>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+                <div class="container">
+                    <nav id="header-top">
+                        <div id="top-left">
+                            <small class="text-capitalize">english</small>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div id="top-right">
+                            <!-- sezione lista sezioni sito -->
+                            <ul id="site-sections">
+                                <li>course</li>
+                                <li>zom</li>
+                            </ul>
+                            <!-- icone dei vari social -->
+                            <ul id="social-icons">
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-git"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-dribbble"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fab fa-pinterest"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 <!-- navbar inferiore -->
-                <nav id="header-bottom">
+                    <nav id="header-bottom">
 
-                </nav>
+                    </nav>
+                </div>
             </header>
             <main>
             </main>
