--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                     </nav>
                 <!-- navbar inferiore -->
                     <nav id="header-bottom">
-
+                        <div id="logo">
+                            <img src="img/MasterStudy_logo.svg" alt="">
+                        </div>
                     </nav>
                 </div>
             </header>
