impostazione struttura headbar-bottom (grafica da rifinire)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,23 @@
                     <nav id="header-bottom">
                         <div id="logo">
                             <img src="img/MasterStudy_logo.svg" alt="">
+                            <label for="">
+                                <i class="fas fa-search"></i>
+                            </label>
+                            <input type="text" placeholder="Cerca" value="">
                         </div>
+                        <div id="">
+                            <i></i>
+                            <p class="text-capitalize">become an istructor</p>
+                        </div>
+                        <div id="">
+                            <i></i>
+                            <p class="text-capitalize">for enterprise</p>
+                        </div>
+                        <button type="button" class="btn-secondary" name="button">login</button>
+                        <button  class="text-uppercase btn-primary"type="button" name="button">sign up</button>
+
+
                     </nav>
                 </div>
             </header>
