sezione jumbotron terminata

--- a/index.html
+++ b/index.html
@@ -89,6 +89,61 @@
                 </div>
             </header>
             <main>
+                <div id="jumbotron">
+                    <div class="container">
+                        <div class="row ">
+                            <div id="jumbo-title" class="col-md-6 text-center">
+                                <h1>start invensting in you</h1>
+                                <p>
+                                    with over 1200 courses in 18 subjects, you're guaranteed to find
+                                    something that's right fo you
+                                </p>
+                                <button class="btn-primary text-uppercase" type="button" name="button">
+                                    join for free
+                                </button>
+                            </div>
+                            <div class="col-md-6">
+                                <img class="img-fluid" src="img/base.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 col-xs-12 ">
+                                <div class="jumbo-card">
+                                    <i class="fas fa-3x fa-globe-europe"></i>
+                                    <h3 class="text-capitalize">
+                                        worldwide recognize
+                                    </h3>
+                                    <p>
+                                    our  online course certificate can be used
+                                    around the world and also in most popular
+                                    universities and companies.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-xs-12 ">
+                                <div class="jumbo-card">
+                                    <i class="fas fa-3x fa-desktop"></i>
+                                    <h3>mostly online learning (sd)</h3>
+                                    <p>
+                                        masterstudy online certificates can be obtained in a range of specialized areas and typically take about a year to complete.
+                                    </p>
+                                </div>
+
+                            </div>
+                            <div class="col-md-4 col-xs-12 ">
+                                <div class="jumbo-card">
+                                    <i class="far fa-3x fa-calendar-check"></i>
+                                    <h3>graduate in as little as 1 Year</h3>
+                                    <p>
+                                        online post-graduate certificates are the popular way to develop your professional qualifications of Masterstudy.
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
             </main>
             <footer>
             </footer>
