--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                 </div>
             </header>
             <main>
-                <div id="jumbotron">
+                <!-- Sezione Jumbotron -->
+                <section id="jumbotron">
                     <div class="container">
                         <div class="row ">
                             <div id="jumbo-title" class="col-md-6 text-center">
@@ -108,6 +109,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4 col-xs-12 ">
+                                <!-- Qui ci sono le 3 card principali del Jumbotron "Jumbo-cards" -->
                                 <div class="jumbo-card">
                                     <i class="fas fa-3x fa-globe-europe"></i>
                                     <h3 class="text-capitalize">
@@ -142,8 +144,39 @@
 
                         </div>
                     </div>
-                </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8 col-xs-12">
+                                <img src="img/cat_1-770x375.jpg" alt="">
+                            </div>
+                            <div class="col-md-4 col-xs-12">
+                                <img src="img/cat_2-272x161.jpg" alt="">
+                            </div>
+                            <div class="col-md-4 col-xs-12">
+                                <img src="img/cat_3-370x155.jpg" alt="">
+                            </div>
 
+                        </div>
+                    </div>
+                </section>
+                <section id="read-more">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- /Sezione Jumbotron e Jumbo-cards -->
+                <div class="">
+
+                </div>
             </main>
             <footer>
             </footer>
