nuova sezione aggiunta ( sezioni precedenti da sistemare )

--- a/index.html
+++ b/index.html
@@ -151,10 +151,13 @@
                             <div class="col-md-8 col-xs-12">
                                 <img src="img/cat_1-770x375.jpg" alt="">
                             </div>
-                            <div class="col-md-4 col-xs-12">
+                            <div class="row">
+
+                            </div>
+                            <div class="col-md-2 col-xs-12 ">
                                 <img src="img/cat_2-272x161.jpg" alt="">
                             </div>
-                            <div class="col-md-4 col-xs-12">
+                            <div class="col-md-2 col-xs-12 ">
                                 <img src="img/cat_3-370x155.jpg" alt="">
                             </div>
 
@@ -165,7 +168,15 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
+                                <h2>
+                                    limitless learning more possibilities
+                                </h2>
+                                <p>
+                                    online courses open the opportunity for learning to almost anyone, regardless of their sheduling committents.
+                                </p>
+                                <button class="btn-primary text-uppercase" type="button" name="button">
+                                    read more
+                                </button>
                             </div>
                             <div class="col-md-6">
                                 <img src="" alt="">
