fine sezione "recent courses" (da rifinire in grafica e riempire i "corsi")

--- a/index.html
+++ b/index.html
@@ -151,13 +151,11 @@
                             <div class="col-md-8 col-xs-12">
                                 <img src="img/cat_1-770x375.jpg" alt="">
                             </div>
-                            <div class="row">
 
-                            </div>
-                            <div class="col-md-2 col-xs-12 ">
+                            <div class="col-md-4 col-xs-12 ">
                                 <img src="img/cat_2-272x161.jpg" alt="">
                             </div>
-                            <div class="col-md-2 col-xs-12 ">
+                            <div class="col-md-4 col-xs-12 ">
                                 <img src="img/cat_3-370x155.jpg" alt="">
                             </div>
 
@@ -185,9 +183,109 @@
                     </div>
                 </section>
                 <!-- /Sezione Jumbotron e Jumbo-cards -->
-                <div class="">
+                <section id="recent-courses">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h2 class="text-uppercase text-center">
+                                    recent courses
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <ul class="d-flex flex-row">
+                                    <li>
+                                        all categories
+                                    </li>
+                                    <li>
+                                        art
+                                    </li>
+                                    <li>
+                                        exercise
+                                    </li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <section>
 
-                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section id="we-proud">
+                    <div class="container">
+                        <div class="row text-center">
+                            <div class="col-md-12">
+                                <h1 >we are proud</h1>
+                                <p>certificate courses are instructed by highly educated and qualified instructors who hold doctoral and master's level degress.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer>
             </footer>
