--- a/index.html
+++ b/index.html
@@ -286,6 +286,30 @@
                         </div>
                     </div>
                 </section>
+                <section id="newsletter">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <h4>subscribe our newsletter</h4>
+                                <p>
+                                    there are many variation of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humor, or ramdomized words
+                                </p>
+                            </div>
+                            <div class="col-md-5">
+                                <h4 class="text-uppercase">
+                                    your e-mail address
+                                </h4>
+                                <input type="text" placeholder="Enter you email" value="">
+                                <button class="text-uppercase" type="button" name="button">
+                                    subscribe
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="popular-courses">
+
+                </section>
             </main>
             <footer>
             </footer>
