--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                         </div>
                     </div>
                 </section>
+                <!-- /Sezione Jumbotron e Jumbo-cards -->
+                <!-- Sezione READ MORE -->
                 <section id="read-more">
                     <div class="container">
                         <div class="row">
@@ -182,7 +184,9 @@
                         </div>
                     </div>
                 </section>
-                <!-- /Sezione Jumbotron e Jumbo-cards -->
+                <!-- /Sezione READ MORE -->
+                <!-- Sezione recent courses -->
+                <!-- In questa sezione é presente l'elenco di tutti i corsi disponibili con le varie card con le informazioni principali -->
                 <section id="recent-courses">
                     <div class="container">
                         <div class="row">
@@ -275,6 +279,7 @@
                         </div>
                     </div>
                 </section>
+                <!-- /Sezione recent courses -->
                 <section id="we-proud">
                     <div class="container">
                         <div class="row text-center">
@@ -286,6 +291,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Sezione newsletter  -->
                 <section id="newsletter">
                     <div class="container">
                         <div class="row">
@@ -307,8 +314,131 @@
                         </div>
                     </div>
                 </section>
+                <!-- /Sezione newsletter -->
                 <section id="popular-courses">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <h2 class="text-uppercase ">
+                                    popular courses
+                                </h2>
+                                <p>
+                                    discover our most popular courses for self learning
+                                </p>
+                            </div>
+                        </div>
 
+                        <div class="row">
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12">
+                                <div class="card">
+                                    <img src="img/photo-1461749280684-dccba630e2f6-272x161.jpeg" alt="">
+                                    <small class="text-capitalize">
+                                        apache
+                                    </small>
+                                    <p>web coding and apache basics</p>
+                                    <hr>
+                                    <i class="far fa-clock"></i>
+                                    <small>6 hour</small>
+                                    <span class="float-left text-capitalize">
+                                        free
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
+                <section id="call-to-action">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="col-md-4">
+                                    <img src="img/image_box_1-221x231.png" alt="">
+                                </div>
+                                <div class="col-md-8">
+                                    <h2>become an instructor</h2>
+                                    <p>
+                                        teach what you love. Masterstudy gives you
+                                        the tools to create the courses.
+                                    </p>
+                                    <button type="button" name="button" class="text-uppercase">
+                                        start teaching
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="col-md-4">
+                                    <img src="img/image_box_2-234x231.png" alt="">
+                                </div>
+                                <div class="col-md-8">
+                                    <h2>setup for business</h2>
+                                    <p>
+                                        get unlimited access to 2,500 of Udemy's top courses for your team
+                                    </p>
+                                    <button class="text-uppercase" type="button" name="button">
+                                        doing business
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section id="testimonial">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 ">
+                                <div class="box">
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </section>
             </main>
             <footer>
