sezione testimonial . Fine

--- a/index.html
+++ b/index.html
@@ -433,7 +433,14 @@
                         <div class="row">
                             <div class="col-md-6 ">
                                 <div class="box">
-
+                                    <h2> come as you are</h2>
+                                    <p>
+                                        mastersudy used is an exellent workshop whether you come as a conselor, advisor, administrator, or faculty member. I am going home empowereed. I am looking forward to attending the On Course Masterstudy and the Masterstudy National Conference next year and facilitating the use of this exellent retention/student success course at my college.
+                                    </p>
+                                    <strong class="text-capitalize">
+                                         tim sab
+                                    </strong>
+                                    <p>general developer, stylemix themes </p>
                                 </div>
                             </div>
                         </div>
