layout HTML completo (grafica da rifinire)

--- a/index.html
+++ b/index.html
@@ -449,6 +449,61 @@
                 </section>
             </main>
             <footer>
+                <div class="container">
+                    <div class="row">
+                        <!-- Footer (sezione about) -->
+                        <div class="col-md-3">
+                            <h4>about</h4>
+                            <p>mastersudy is education wordpress theme featured by learning management system (LMS) for online education.
+                            developed by
+                            <a href="#">
+                                stylemixThemes
+                            </a>
+                            </p>
+                            <i class="fab fa-facebook"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-instagram"></i>
+                        </div>
+                        <div class="col-md-3">
+                            <!-- footer (sezione contatti) -->
+                            <h4>contact</h4>
+                            <address class="">
+                                USA, california20, First Avenue, California
+                            </address>
+                            <p>Tel: +1 212-458 300 32</p>
+                            <p>Fax: +1 212 375 24 14</p>
+                            <small>info@masterstudy.com</small>
+                        </div>
+                        <!-- footer (sezione pages) -->
+                        <div class="col-md-3">
+                            <h4>pages</h4>
+                            <ul>
+                                <li>blog</li>
+                                <li>home</li>
+                                <li>shortcodes</li>
+                                <li>courses</li>
+                                <li>membership</li>
+                                <li>typografy</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <h4>blog</h4>
+                            <div class="blog-card">
+                                <img src="img/photo-1517520287167-4bbf64a00d66-50x50.jpeg" alt="">
+                                <p>Our main target is to "developing yourself
+                                    as a leader"
+                                </p>
+                                <small> - August 9 2018</small>
+                            </div>
+                            <div class="blog-card">
+                                <img src="img/photo-1490376840453-5f616fbebe5b-50x50.jpeg" alt="">
+                                <p>thise other college expenses you aren't thinking about</p>
+                                <small> - June 3, 2015</small>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </footer>
         </div>
 
