--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </section>
-                <section>
+                <section id="categories-grid">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8 col-xs-12">
@@ -155,12 +155,21 @@
                             </div>
 
                             <div class="col-md-4 col-xs-12 ">
-                                <img src="img/cat_2-272x161.jpg" alt="">
-                            </div>
-                            <div class="col-md-4 col-xs-12 ">
+                                <img src="img/cat_2-370x155.jpg" alt="">
                                 <img src="img/cat_3-370x155.jpg" alt="">
                             </div>
 
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="img/cat_5-370x155.jpg" alt="">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/cat_4-370x155.jpg" alt="">
+                            </div>
+                            <div class="col-md-4">
+                                <img src="img/cat_6-370x155.jpg" alt="">
+                            </div>
                         </div>
                     </div>
                 </section>
