sistemazione stile card corsi

--- a/index.html
+++ b/index.html
@@ -232,11 +232,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -247,11 +249,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -262,11 +266,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -277,11 +283,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <section>
@@ -348,11 +356,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -363,11 +373,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -378,11 +390,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-3 col-xs-12">
@@ -393,11 +407,13 @@
                                     </small>
                                     <p>web coding and apache basics</p>
                                     <hr>
-                                    <i class="far fa-clock"></i>
-                                    <small>6 hour</small>
-                                    <span class="float-left text-capitalize">
-                                        free
-                                    </span>
+                                    <div class="card-footer">
+                                        <i class="far fa-clock"></i>
+                                        <small>6 hour</small>
+                                        <span class="float-right text-capitalize">
+                                            free
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
